<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <item
    android:id="@+id/app_bar_screen"
    android:title="@string/screenshot"
    android:icon="@drawable/ic_baseline_add_a_photo_24px"
    app:showAsAction="ifRoom"/>
  <item
    android:id="@+id/app_bar_settings"
    android:title="@string/action_settings"
    app:showAsAction="never"/>
  <item
    android:id="@+id/app_bar_disconnect_bluetooth"
  android:title="@string/disconnect_bluetooth_gatt"
  app:showAsAction="never"/>
  <item
    android:id="@+id/app_bar_test_db"
    android:title="@string/test_db"
    app:showAsAction="never"/>
  <item
      android:id="@+id/app_bar_clear_db"
      android:title="@string/clear_db"
      app:showAsAction="never"/>
  <item
      android:id="@+id/app_bar_export_all_db"
      android:title="@string/export_all_db"
      app:showAsAction="never"/>
</menu>